[gd_scene load_steps=4 format=2]

[ext_resource path="res://Book/Book.gd" type="Script" id=1]
[ext_resource path="res://Book/BookPage1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Book/BookPage2.tscn" type="PackedScene" id=3]

[node name="MainBook" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
scenes = [ ExtResource( 2 ), ExtResource( 3 ) ]

[node name="CenterContainer" type="CenterContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="HBoxContainer" parent="CenterContainer"]
editor/display_folded = true
margin_left = 19.0
margin_top = 12.0
margin_right = 1581.0
margin_bottom = 888.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
editor/display_folded = true
margin_right = 150.0
margin_bottom = 876.0

[node name="LeftButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_top = 363.0
margin_right = 150.0
margin_bottom = 513.0
rect_min_size = Vector2( 150, 150 )

[node name="PageContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_left = 154.0
margin_right = 1408.0
margin_bottom = 876.0
rect_min_size = Vector2( 1254, 876 )

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
editor/display_folded = true
margin_left = 1412.0
margin_right = 1562.0
margin_bottom = 876.0

[node name="RightButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_top = 363.0
margin_right = 150.0
margin_bottom = 513.0
rect_min_size = Vector2( 150, 150 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/RightButton" to="." method="_on_RightButton_pressed"]
